--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
     "bootstrap-sass": "^3.0.0"
+  },
+  "dependencies": {
+    "bootstrap-material-design": "^0.5.10"
   }
 }
