--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "stevenmaguire/yelp-php": "^1.4",
-        "tymon/jwt-auth": "^0.5.9"
+        "tymon/jwt-auth": "^0.5.9",
+        "barryvdh/laravel-cors": "^0.8.1"
           },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
